fix horizontal alignment with slashes in crumbs

--- a/css/inner/navbar.less
+++ b/css/inner/navbar.less
@@ -102,7 +102,7 @@
           }
           span {
             display: inline-block;
-            padding: 0 .5em;
+            padding: 0 .5em 0 .25em;
           }
 
           span.label {
